<resources>
    <string name="app_name">BarterinApps</string>
    <string name="text_login_header">Sign in to barterin</string>
    <string name="text_username_or_email">Username Or Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_login">SIGN IN</string>
    <string name="text_sign_up_now">Sign up now</string>
    <string name="text_not_a_member">Not A Member ?</string>
    <string name="text_error">"Ups, There's A Problem  "</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_add">Add</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_profile">Profile</string>
    <string name="text_signup_header">Sign up to Barterin</string>
    <string name="text_name">Name</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_agreement">Creating an account means you\'re okay with our Terms of Service, Privacy Policy, and our default Notification Settings.</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_already_member">Already member ?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_passwordnotvalid">Password Not Valid</string>
    <string name="text_usernameempty">User Must Not Be Empty</string>
    <string name="text_password_empty_alert">Password Must Not Be Empty</string>
    <string name="text_name_empty_alert">Name Must Be Not Empty</string>
    <string name="text_email_empty_alert">Email Format Invalid</string>
    <string name="description_for_splashscreen">Description for splash screen</string>
    <string name="text_email_verification">Email Verification</string>
    <string name="text_send_email">We sent your code to </string>
    <string name="text_don_t_receive_code">Don\'t receive code ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_insert_your_email">Pelase insert your email</string>
    <string name="text_insert_your_password">Please insert your password</string>
    <string name="text_insert_yourname">Please insert your full name!</string>
    <string name="text_insert_username">Please insert your username</string>
    <string name="text_insert_email">Please insert your email</string>
    <string name="text_add_address">Add Your Address</string>
    <string name="text_name_address">Name Address</string>
    <string name="text_receiver">Receiver</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_city">City</string>
    <string name="text_save_address">Save Address</string>
    <string name="text_gender">Gender</string>
    <string name="text_born">Born</string>
    <string name="text_edit_your_profile">Edit Your Profile</string>
    <string name="text_expired">This code will expired in</string>
    <string name="text_has_expired">This code has expired, please resend it</string>
    <string name="text_code_not_expired">Your code has not expired</string>
    <string name="text_code_resend">Your code has been resent</string>
    <string name="text_otp_verification">OTP Verification</string>
    <string name="text_continue">Continue</string>
    <string name="text_resend_otp_code">Resend OTP Code</string>
    <string name="text_welcome_back">Welcome Back</string>
    <string name="text_categories">Categories</string>
    <string name="upload_item">Upload Items</string>
    <string name="text_type">Item Type</string>
    <string name="text_item_name">Item Name</string>
    <string name="text_item_description">Item Description</string>
    <string name="text_estimated">Estimated Length of Use</string>
    <string name="text_price_range">Price Range</string>
    <string name="upload_image">Upload Images</string>
    <string name="text_upload">Upload</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text_account_settings">Account Settings</string>
    <string name="change_language">Change Language</string>
    <string name="text_language_settings">Language</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="messages_theme">Theme</string>
    <string name="text_my_address">My Address</string>
    <string name="text_alert">Are you sure ?</string>
    <string name="text_logout_verification">are you sure you want to log out of this session ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="title_activity_detail_item">DetailItemActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="text_my_cart">My Cart</string>
    <string name="chat">Chat</string>
    <string name="text_add_addres_success">Add Address Success</string>
    <string name="text_image_input1">Please Input Image Number One !</string>
    <string name="text_image_input2">Please Input Image Number Two !</string>
    <string name="text_image_input3">Please Input Image Number Three !\\</string>
    <string name="text_barter_success">Congratulations, your item has been successfully bartered, check its status in the transaction section.</string>
    <string name="text_not_permission">Dont Have Permission !</string>
    <string name="text_full_adress">Full Adress</string>
    <string name="text_post_code">Post Code</string>
    <string name="text_choose_category">Choose Category</string>
    <string name="text_choose_type">Choose Type</string>
    <string name="text_choose_address">Choose Address</string>
</resources>