<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_baseline_wishlist"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_baseline_transaction_24"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_user"
        android:title="@string/title_profile" />

</menu>